# rust-nix

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: Cargo.toml  LICENSE  README.md  flake.nix
{{ cookiecutter.project_slug }}/.github/workflows/: build.yml
